samples/_failures_safe/1761621769_abb072_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_302aeed6.c:187:1: error: expected identifier or ‘(’ at end of input
  187 | void
      | ^~~~
